--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Hello World!",
   "main": "src/main.js",
   "scripts": {
-    "start": "electron .",
+    "dev": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -13,6 +13,8 @@
     "electron": "^22.0.0"
   },
   "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "sqlite3": "^5.1.7"
   }
 }
